frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weakspotter-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: weakspotter-frontend
  template:
    metadata:
      labels:
        app: weakspotter-frontend
    spec:
      containers:
        - name: frontend
          ports:
            - containerPort: 80
