frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weakspotter-frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: weakspotter-frontend
  type: ClusterIP
