frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weakspotter-frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: weakspotter-frontend
                port:
                  number: 80
  tls:
    - secretName: weakspotter-tls
